--- a/landing_page/styles.css
+++ b/landing_page/styles.css
@@ -7,11 +7,21 @@ body {
 
 .header {
     display: flex;
-    padding: 16px 12% 16px 12%;
+    flex-direction: column;
+    align-items: center;
+    background-color: #040404;
+    padding: 32px 32px 16px 32px;
+    min-height: auto;
+}
+
+.navbar {
+    display: flex;
     color: white;
     align-items: center;
-    justify-content: center;
     background-color: #040404;
+    width: 100%;
+    max-width: 950px;
+    margin-bottom: 32px;
 }
 
 .logo {
@@ -29,15 +39,6 @@ a {
     text-decoration: none;
     margin-left: 16px;
     color: white;
-}
-
-.welcome {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #040404;
-    padding: 32px 32px 16px 32px;
-    min-height: auto;
 }
 
 .welcome-content {
