--- a/rock_paper_scissors/styles.css
+++ b/rock_paper_scissors/styles.css
@@ -43,7 +43,14 @@ h1 {
     display: flex;
     gap: 8px;
 }
+ 
+.scoreBoard {
+    display: flex;
+}
 
+.playerScore {
+    width: 72px;
+}
 button {
     display: flex;
     flex-direction: column;
@@ -52,10 +59,13 @@ button {
     border-style: none;
     max-width: 120px;
     min-height: 150px;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
 }
 
 button:hover {
     background-color: #9aba95;
+    box-shadow: 0 8px 8px 0 #323e2a, 0 4px 12px 0 #9aba95;
 }
 
 .caption {
