--- a/rock_paper_scissors/styles.css
+++ b/rock_paper_scissors/styles.css
@@ -28,7 +28,7 @@ h1 {
     padding: 36px 8px 36px 8px;
 }
 
-.playerScoreArea {
+.scoreArea {
     display: flex;
     flex-direction: column;
 }
@@ -48,9 +48,10 @@ h1 {
     display: flex;
 }
 
-.playerScore {
+.score {
     width: 72px;
 }
+
 button {
     display: flex;
     flex-direction: column;
@@ -61,9 +62,10 @@ button {
     min-height: 150px;
     -webkit-transition-duration: 0.4s;
     transition-duration: 0.4s;
+    cursor: pointer;
 }
 
-button:hover {
+.selectableButton:hover {
     background-color: #9aba95;
     box-shadow: 0 8px 8px 0 #323e2a, 0 4px 12px 0 #9aba95;
 }
