added feature - show computer's selection, removed all tests, user interface complete

--- a/rock_paper_scissors/styles.css
+++ b/rock_paper_scissors/styles.css
@@ -46,10 +46,6 @@ h1 {
     padding: 8px;
 }
 
-.winnerHeadingStyle {
-    color: #d8b207;
-}
-
 .rpsButtons {
     display: flex;
     gap: 8px;
@@ -71,8 +67,6 @@ h1 {
     border-style: none;
     max-width: 120px;
     min-height: 150px;
-    -webkit-transition-duration: 0.4s;
-    transition-duration: 0.4s;
 }
 
 .selectableButton {
@@ -80,7 +74,10 @@ h1 {
 }
 
 .selectableButton:hover,
-.endGameSelection {
+.endGameSelection,
+.computerSelection {
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.3s;
     background-color: #9aba95;
     box-shadow: 0 8px 8px 0 #323e2a, 0 4px 12px 0 #9aba95;
 }
@@ -99,6 +96,8 @@ button img {
 }
 
 .reset {
+    font-size: 16px;
+    font-weight: bold;
     background-color: #d5e9e8;
     border-style: none;
     border-radius: 15px;
@@ -117,6 +116,6 @@ button img {
     border-radius: 15px;
     align-items: center;
     max-width: 600px;
-    margin: 0px auto;
+    margin: 16px auto;
     padding: 16px;
 }
